--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,11 @@
         "preferred-install": {
             "*": "dist"
         },
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "phpro/grumphp": false,
+            "symfony/flex": true
+        }
     },
     "require": {
         "php": "^7.3.5",
@@ -45,6 +49,7 @@
         "symfony/property-info": "5.0.*",
         "symfony/proxy-manager-bridge": "5.0.*",
         "symfony/security-bundle": "5.0.*",
+        "symfony/security-csrf": "5.0.*",
         "symfony/serializer": "5.0.*",
         "symfony/translation": "5.0.*",
         "symfony/twig-bundle": "5.0.*",
